--- a/expense-tracker/package.json
+++ b/expense-tracker/package.json
@@ -10,6 +10,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "serve": "^11.3.2",
     "uuid": "^8.1.0"
   },
   "scripts": {
