--- a/infinite-scroll/package.json
+++ b/infinite-scroll/package.json
@@ -13,13 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "config": "^3.3.1",
     "express": "^4.17.1",
     "node-fetch": "^2.6.0",
     "unsplash-js": "^6.0.0"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
+    "dotenv": "^8.2.0",
     "nodemon": "^2.0.4"
   }
 }
