--- a/pagination/.gitignore
+++ b/pagination/.gitignore
@@ -1,4 +1,5 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Firebase Hosting
+.firebase
 
 # dependencies
 /node_modules
