--- a/github-finder-final/firebase.json
+++ b/github-finder-final/firebase.json
@@ -1,11 +1,13 @@
 {
-  "hosting": {
-    "site": "github-finder-nil",
-    "public": "build",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ]
-  }
+	"hosting": {
+		"site": "github-finder-nil",
+		"public": "build",
+		"ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+		"rewrites": [
+			{
+				"source": "**",
+				"destination": "/index.html"
+			}
+		]
+	}
 }
