--- a/react-weather-app/.env
+++ b/react-weather-app/.env
@@ -1,2 +1,3 @@
 REACT_APP_WEATHER_API_KEY=79f53909e8f32d9e62fbf88d5ecaf8dd
 REACT_APP_MAPQUEST_API_KEY=tcP2ZGoQi9AWGXmx71GOf5t1ChL2D4zs
+GENERATE_SOURCEMAP=false
